zoom and scroll

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.2)
 
 project(viewer)
 
@@ -8,6 +8,10 @@ set(SOURCES
     imgui-sfml/imgui-SFML.cpp
     main.cpp
 )
+
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF) 
 
 include_directories(imgui)
 include_directories(imgui-sfml)
