load float images with iio

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,20 +7,25 @@ set(SOURCES
     imgui/imgui_draw.cpp
     imgui/imgui_demo.cpp
     imgui-sfml/imgui-SFML.cpp
+    iio/iio.c
     main.cpp
 )
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF) 
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 include_directories(imgui)
 include_directories(imgui-sfml)
+include_directories(iio)
 
 add_executable(viewer ${SOURCES})
 target_link_libraries(viewer sfml-system)
 target_link_libraries(viewer sfml-window)
 target_link_libraries(viewer sfml-graphics)
 target_link_libraries(viewer GL)
+target_link_libraries(viewer jpeg)
+target_link_libraries(viewer png)
+target_link_libraries(viewer tiff)
 
 
