use find_package for opengl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,9 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+find_package(OpenGL REQUIRED)
+include_directories(${OPENGL_INCLUDE_DIR})
+
 include_directories(imgui)
 include_directories(imgui-sfml)
 include_directories(iio)
@@ -23,9 +26,8 @@ add_executable(viewer ${SOURCES})
 target_link_libraries(viewer sfml-system)
 target_link_libraries(viewer sfml-window)
 target_link_libraries(viewer sfml-graphics)
-target_link_libraries(viewer GL)
 target_link_libraries(viewer jpeg)
 target_link_libraries(viewer png)
 target_link_libraries(viewer tiff)
-
+target_link_libraries(viewer ${OPENGL_LIBRARIES})
 
