--- a/efsw/CMakeLists.txt
+++ b/efsw/CMakeLists.txt
@@ -120,10 +120,10 @@ elseif (NOT (${CMAKE_SYSTEM_NAME} MATCHES "Haiku") AND NOT WIN32)
 	target_link_libraries(efsw pthread)
 endif()	
 
-set(LIB_DESTINATION "${CMAKE_INSTALL_PREFIX}/lib")
-install(TARGETS efsw LIBRARY DESTINATION ${LIB_DESTINATION} ARCHIVE DESTINATION ${LIB_DESTINATION} RUNTIME DESTINATION ${LIB_DESTINATION})
-file (GLOB HDRS "include/efsw/*.h" "include/efsw/*.hpp")
-install (FILES ${HDRS} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/efsw)
+# set(LIB_DESTINATION "${CMAKE_INSTALL_PREFIX}/lib")
+# install(TARGETS efsw LIBRARY DESTINATION ${LIB_DESTINATION} ARCHIVE DESTINATION ${LIB_DESTINATION} RUNTIME DESTINATION ${LIB_DESTINATION})
+# file (GLOB HDRS "include/efsw/*.h" "include/efsw/*.hpp")
+# install (FILES ${HDRS} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/efsw)
 
 if (BUILD_TEST_APP)
     add_executable(efsw-test src/test/efsw-test.cpp)
