[efsw/Makefile] remove silly archive warnings

--- a/efsw/Makefile
+++ b/efsw/Makefile
@@ -4,5 +4,5 @@ SRC      = $(shell ls src/efsw/*.cpp src/efsw/platform/posix/*.cpp)
 OBJ      = $(SRC:.cpp=.o)
 LIB      = efsw.a
 
-$(LIB)   : $(LIB)($(OBJ))
+$(LIB)   : $(OBJ) ; $(AR) qc $(LIB) $(OBJ)
 clean    : ; $(RM) $(LIB) $(OBJ)
