update makefile for svg support

--- a/misc/Makefile
+++ b/misc/Makefile
@@ -1,5 +1,6 @@
-CXXFLAGS = -std=c++11 -O2
-CPPFLAGS = -Iimgui -Iimgui-sfml -Iiio -Iefsw/include -Dgmic_build
+export CXXFLAGS = -std=c++11 -march=native -O3
+export CFLAGS   = -march=native -O3
+CPPFLAGS = -Iimgui -Iimgui-sfml -Iiio -Iefsw/include -Inanosvg/src #-Dgmic_build
 LDLIBS   = -lsfml-system -lsfml-window -lsfml-graphics   \
            -ljpeg -lpng -ltiff -lGL -lpthread -lz
 
@@ -7,10 +8,10 @@ BIN      = vpv
 OBJ      = imgui/imgui.o imgui/imgui_draw.o imgui/imgui_demo.o             \
            imgui-sfml/imgui-SFML.o iio/iio.o main.o Window.o Sequence.o    \
            View.o Player.o Colormap.o Image.o Texture.o Shader.o shaders.o \
-           layout.o watcher.o wrapplambda.o gmic/gmic.o efsw/efsw.a
+           layout.o watcher.o wrapplambda.o SVG.o efsw/efsw.a #gmic/gmic.o
 
 all      : $(BIN)
 $(BIN)   : $(OBJ) ; $(CXX) $(LDFLAGS) -o $@ $(OBJ) $(LDLIBS)
-clean    :        ; $(RM) $(BIN) $(OBJ)
+clean    :        ; $(RM) $(BIN) $(OBJ) ; $(MAKE) -C efsw clean
 
 efsw/efsw.a: ; $(MAKE) -C efsw
