user configuration (~/.vpvrc and ./.vpvrc)
Default options:
SCALE = 1
WATCH = false
CACHE = true
SCREENSHOT = 'screenshot_%d.png'

WINDOW_WIDTH = 1024
WINDOW_HEIGHT = 720

SHOW_HUD = true
SHOW_SVG = true
SHOW_MENUBAR = true

DEFAULT_LAYOUT = "grid"
AUTOZOOM = true
SATURATION = 0.05

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ set(SOURCES
     watcher.cpp
     wrapplambda.c
     SVG.cpp
+    config.cpp
 )
 
 if(USE_GMIC)
@@ -65,7 +66,48 @@ include_directories(efsw/include)
 
 include_directories(nanosvg/src)
 
+include_directories(lua/src)
+
+add_library(lua STATIC
+    lua/src/lapi.c
+    lua/src/lauxlib.c
+    lua/src/lbaselib.c
+    lua/src/lbitlib.c
+    lua/src/lcode.c
+    lua/src/lcorolib.c
+    lua/src/lctype.c
+    lua/src/ldblib.c
+    lua/src/ldebug.c
+    lua/src/ldo.c
+    lua/src/ldump.c
+    lua/src/lfunc.c
+    lua/src/lgc.c
+    lua/src/linit.c
+    lua/src/liolib.c
+    lua/src/llex.c
+    lua/src/lmathlib.c
+    lua/src/lmem.c
+    lua/src/loadlib.c
+    lua/src/lobject.c
+    lua/src/lopcodes.c
+    lua/src/loslib.c
+    lua/src/lparser.c
+    lua/src/lstate.c
+    lua/src/lstring.c
+    lua/src/lstrlib.c
+    lua/src/ltable.c
+    lua/src/ltablib.c
+    lua/src/ltm.c
+    lua/src/lua.c
+    lua/src/luac.c
+    lua/src/lundump.c
+    lua/src/lutf8lib.c
+    lua/src/lvm.c
+    lua/src/lzio.c
+)
+
 add_executable(viewer ${SOURCES})
+target_link_libraries(viewer lua)
 target_link_libraries(viewer sfml-system)
 target_link_libraries(viewer sfml-window)
 target_link_libraries(viewer sfml-graphics)
