--- a/misc/Makefile
+++ b/misc/Makefile
@@ -1,19 +1,51 @@
 export CXXFLAGS = -std=c++11 -march=native -O3
 export CFLAGS   = -march=native -O3
-CPPFLAGS = -Iexternal/imgui -Iexternal/imgui-sfml -Iexternal/iio \
-           -Iexternal/efsw/include -Iexternal/nanosvg/src \
-           -Iexternal/lua/src -Iexternal/imscript -Iexternal/others
+
+CPPFLAGS = -Iexternal/imgui                              \
+           -Iexternal/imgui-sfml                         \
+           -Iexternal/iio                                \
+           -Iexternal/nanosvg/src                        \
+           -Iexternal/lua/src                            \
+           -Iexternal/imscript                           \
+           -Iexternal/others                             \
+           -Iexternal/efsw/include                       \
+           -Iexternal/kaguya/include                     \
+           -Iexternal/imgui/misc/fonts                   \
+           -Iexternal/imgui/examples/sdl_opengl2_example \
+           -Iexternal/imgui/examples/libs/gl3w \
+           -DSDL
+
 LDLIBS   = -lsfml-system -lsfml-window -lsfml-graphics   \
-           -ljpeg -lpng -ltiff -lGL -lpthread -lz
+           -ljpeg -lpng -ltiff -lGL -lpthread -lz -ldl -lSDL2
 
 BIN      = vpv
-OBJ      = external/imgui/imgui.o external/imgui/imgui_draw.o \
-           external/imgui/imgui_demo.o external/imgui-sfml/imgui-SFML.o \
-           external/iio/iio.o src/main.o src/Window.o src/Sequence.o    \
-           src/View.o src/Player.o src/Colormap.o src/Image.o src/Texture.o \
-           src/Shader.o src/shaders.o src/layout.o src/watcher.o \
-           src/wrapplambda.o src/SVG.o src/config.o src/editors.o \
-           luafiles.o external/efsw/efsw.a external/lua/src/liblua.a #external/gmic/gmic.o
+OBJ      = src/main.o                        \
+           src/Window.o                      \
+           src/Sequence.o                    \
+           src/View.o                        \
+           src/Player.o                      \
+           src/Colormap.o                    \
+           src/Image.o                       \
+           src/Texture.o                     \
+           src/Shader.o                      \
+           src/shaders.o                     \
+           src/layout.o                      \
+           src/watcher.o                     \
+           src/wrapplambda.o                 \
+           src/SVG.o                         \
+           src/config.o                      \
+           src/editors.o                     \
+           src/events.o                     \
+           src/luafiles.o                    \
+           external/efsw/efsw.a              \
+           external/lua/src/liblua.a         \
+           external/imgui/imgui.o            \
+           external/imgui/imgui_draw.o       \
+           external/imgui/imgui_demo.o       \
+           external/iio/iio.o                \
+           external/imgui/examples/libs/gl3w/GL/gl3w.o \
+           external/imgui/examples/sdl_opengl2_example/imgui_impl_sdl_gl2.o \
+           #external/gmic/gmic.o
 
 all      : $(BIN)
 $(BIN)   : $(OBJ) ; $(CXX) $(LDFLAGS) -o $@ $(OBJ) $(LDLIBS)
@@ -25,9 +57,8 @@ clean    :
 external/efsw/efsw.a:      ; $(MAKE) -C external/efsw
 external/lua/src/liblua.a: ; $(MAKE) -C external/lua/src liblua.a
 
-luafiles.c: vpvrc
-	bash misc/genluafiles.sh $^ >$@
+src/vpvrc.i : vpvrc ; xxd -i $< $@
 
-
-.deps.mk:         ; $(CC) $(CPPFLAGS) -MM *.cpp > $@
+.deps.mk:
+	$(CC) $(CPPFLAGS) -MM src/*.cpp src/*.c | sed "\:^[^ ]:s:^:src/:g" > $@
 -include .deps.mk
