display histogram with shift+h
and use imgui callbacks instead of ugly hacks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -242,6 +242,7 @@ set(SOURCES ${SOURCES}
     src/config.cpp
     src/editors.cpp
     src/events.cpp
+    src/imgui_custom.cpp
     external/imgui/imgui.cpp
     external/imgui/imgui_draw.cpp
     external/imgui/imgui_demo.cpp
