edit gui: add adjustable parameters for more interactivity
example: vpv image.png e:'1 x $1 ^'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -263,6 +263,7 @@ set(SOURCES ${SOURCES}
     src/ImageProvider.cpp
     src/LoadingThread.cpp
     src/Terminal.cpp
+    src/EditGUI.cpp
     external/imgui/imgui.cpp
     external/imgui/imgui_draw.cpp
     external/imgui/imgui_demo.cpp
