--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ option(USE_GMIC "compile with GMIC support" OFF)
 option(USE_FFTW "compile with fftw support (for gmic)" OFF)
 option(USE_OCTAVE "compile with octave support" OFF)
 option(USE_SDL "compile with SDL backend instead of SFMl" ON)
+option(USE_GL3 "compile with OpenGL3 backend instead of OpenGL2" ON)
 option(USE_LIBRAW "compile with LibRAW support" OFF)
 option(USE_GDAL "compile with GDAL support" OFF)
 
@@ -214,13 +215,23 @@ add_library(lua STATIC
 if(USE_SDL)
     add_definitions(-DSDL)
 
+    if (USE_GL3)
+        add_definitions(-DGL3)
+        set(SOURCES ${SOURCES}
+            external/imgui/examples/sdl_opengl3_example/imgui_impl_sdl_gl3.cpp
+        )
+        include_directories(external/imgui/examples/sdl_opengl3_example)
+    else()
+        set(SOURCES ${SOURCES}
+            external/imgui/examples/sdl_opengl2_example/imgui_impl_sdl_gl2.cpp
+        )
+        include_directories(external/imgui/examples/sdl_opengl2_example)
+    endif()
+
     set(SOURCES ${SOURCES}
-        external/imgui/examples/sdl_opengl2_example/imgui_impl_sdl_gl2.cpp
         external/imgui/examples/libs/gl3w/GL/gl3w.c
     )
-
     include_directories(external/imgui/examples/libs/gl3w)
-    include_directories(external/imgui/examples/sdl_opengl2_example)
 
     set(LIBS ${LIBS} SDL2)
 endif()
