add support for numpy array (up to 4D, float/double, C order)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -259,6 +259,16 @@ endif()
 
 #################
 ##
+##  CNPY
+##
+#################
+include_directories(external/cnpy)
+set(SOURCES ${SOURCES}
+    external/cnpy/cnpy.cpp
+)
+
+#################
+##
 ##  VPV
 ##
 #################
