enable option FORCE_IIO_OPEN in vpvrc

--- a/misc/Makefile
+++ b/misc/Makefile
@@ -28,7 +28,8 @@ clean    :
 	$(MAKE) -C external/lua/src clean
 
 external/efsw/efsw.a:      ; $(MAKE) -C external/efsw
-external/lua/src/liblua.a: ; $(MAKE) -C external/lua/src liblua.a -e CC="$(CC)"
+external/lua/src/liblua.a:
+	$(MAKE) -C external/lua/src posix CC="$(CC)" MYCFLAGS="$(CFLAGS)"
 
 src/luafiles.c: vpvrc ; bash misc/genluafiles.sh $^ >$@
 
