--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,15 @@ compiler:
 matrix:
   include:
     - os: linux
+      dist: xenial
+    - os: linux
+      dist: bionic
     - os: osx
+      osx_image: xcode9.4
+    - os: osx
+      osx_image: xcode11.3
+    - os: osx
+      osx_image: xcode10.3
 
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
